1.添加轴温信息 随机抓取

--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Text/StringResource-tm.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Text/StringResource-tm.xaml
@@ -8,17 +8,17 @@
     <system:String x:Key="EngineSpeed">Скор.т-За</system:String>
     <system:String x:Key="DieselEngineSpeed">Скор.вр.кол.вала д.</system:String>
     <system:String x:Key="MasterVoltage" xml:space="preserve">Снловое на&#13;пряже нне</system:String>
-    <system:String x:Key="MasterCurrent" xml:space="preserve">Снловой ток</system:String>
+    <system:String x:Key="MasterCurrent" xml:space="preserve">Снловой&#13;ток</system:String>
     <system:String x:Key="OilPressure" xml:space="preserve">Смазочное&#13;давленне</system:String>
-    <system:String x:Key="FuelPressure" xml:space="preserve">Давленне М-горення</system:String>
-    <system:String x:Key="CoolingWaterTemperature" xml:space="preserve">Т゜С&#13;охлводы</system:String>
-    <system:String x:Key="OILTEngineOilTemperature" xml:space="preserve">Т゜С&#13;масла</system:String>
+    <system:String x:Key="FuelPressure" xml:space="preserve">Давленне&#13;М-горення</system:String>
+    <system:String x:Key="CoolingWaterTemperature" xml:space="preserve">Т℃&#13;охлводы</system:String>
+    <system:String x:Key="OILTEngineOilTemperature" xml:space="preserve">Т℃&#13;масла</system:String>
     <system:String x:Key="FaultInfo" xml:space="preserve">Аварня&#13;Инфор&#13;мацня</system:String>
-    <system:String x:Key="AxleTemperature" xml:space="preserve">Т゜С&#13;оси</system:String>
+    <system:String x:Key="AxleTemperature" xml:space="preserve">Т℃&#13;оси</system:String>
 
     <!--<system:String x:Key="AxleTemperature1"   xml:space="preserve"></system:String>-->
-    <x:Static x:Key="AxleTemperature1" Member="system:String.Empty"></x:Static>
-    
+    <x:Static x:Key="AxleTemperature1" Member="system:String.Empty" />
+
     <system:String x:Key="CurrentMaxOther" xml:space="preserve">本&#13;MAX&#13;他</system:String>
     <system:String x:Key="AxleBitTemperature">ПП.оси Т℃</system:String>
     <system:String x:Key="Axial" xml:space="preserve">ОСИ N0</system:String>
@@ -35,12 +35,12 @@
     <system:String x:Key="Axis">ОСИ</system:String>
     <system:String x:Key="Position">N0</system:String>
     <system:String x:Key="AxleTripInfo">Раз.цепь：‘×××’；КЗ：‘---’；Авария：Индик.крас.цвета</system:String>
-    <system:String x:Key="CurrentCar" xml:space="preserve">Дан&#13;车</system:String>
-    <system:String x:Key="OthertCar" xml:space="preserve">他&#13;车</system:String>
-    <system:String x:Key="DieselEngineSpeed1" xml:space="preserve">Скор.вр.кол.&#13;вала д.</system:String>
+    <system:String x:Key="CurrentCar" xml:space="preserve">Даи&#13;ный</system:String>
+    <system:String x:Key="OthertCar" xml:space="preserve">Дру&#13;гой</system:String>
+    <system:String x:Key="DieselEngineSpeed1" xml:space="preserve">Скоростъ&#13;вр.днзеля</system:String>
     <system:String x:Key="RunParam">Ходовые параметры</system:String>
-    <system:String x:Key="CurrentCarParam">本 车 运 行 参 数</system:String>
-    <system:String x:Key="OtherCarRunParam">他 车 运 行 参 数</system:String>
+    <system:String x:Key="CurrentCarParam">Ходлар-тры д.эл-за</system:String>
+    <system:String x:Key="OtherCarRunParam">Ходлар-тры др.эл-за</system:String>
     <system:String x:Key="EngineTotalRunMileage">机车累计运行里程</system:String>
     <system:String x:Key="EngineToalWithLoadTime">Сум.хц.вр.т.за.нагр：</system:String>
     <system:String x:Key="DieselEngineNoLoadTotalTime">Сум.вр.х.хода.д-ля：</system:String>
@@ -84,7 +84,7 @@
     <system:String x:Key="OutletTemperature">Выходящая Т℃</system:String>
     <system:String x:Key="InletTemperature">Входящая Т℃</system:String>
     <system:String x:Key="ColdWaterSystemOfDieselEngine">2.Снстема среднеохл.воды д-ля</system:String>
-    <system:String x:Key="OilInletTemperature">Вх.Т゜С масла</system:String>
+    <system:String x:Key="OilInletTemperature">Вх.Т℃ масла</system:String>
     <system:String x:Key="OilOutletTemperature">Вых.Т℃ масла</system:String>
     <system:String x:Key="WaterTemperatureOfHeatExchanger">Т℃ воды теплообменннка</system:String>
     <system:String x:Key="DieselPressure">3.Давленне масла</system:String>
@@ -126,9 +126,9 @@
     <system:String x:Key="HightOutletTemperature">高温水出口温度</system:String>
     <system:String x:Key="InletTemperatureOfColdWater">中冷水进口温度</system:String>
     <system:String x:Key="OutletTemperatureOfColdWater">中冷水出口温度</system:String>
-    <system:String x:Key="DieselPressure2">机油压力：</system:String>
-    <system:String x:Key="FuelPumpOutletPressure">燃油泵出口压力</system:String>
-    <system:String x:Key="FuelSystemEndPressure">燃油系统末端压力</system:String>
+    <system:String x:Key="DieselPressure2">Давленне мажнно масла</system:String>
+    <system:String x:Key="FuelPumpOutletPressure">Выход н-са м-гореиня</system:String>
+    <system:String x:Key="FuelSystemEndPressure">Конец снстемы</system:String>
     <system:String x:Key="Original">本</system:String>
     <system:String x:Key="Other">他</system:String>
 
