--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Styles/TurkmenistanButtonStyle-ch.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Styles/TurkmenistanButtonStyle-ch.xaml
@@ -191,7 +191,8 @@
             <TextBlock
                 HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
                 VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
-                Text="{TemplateBinding Content}"
+                Text="{TemplateBinding Content,
+                                       Converter={StaticResource DoubleToStringConverter}}"
                 TextAlignment="Center" />
         </Border>
     </ControlTemplate>
@@ -361,7 +362,7 @@
         <Setter Property="IsHitTestVisible" Value="False" />
         <Setter Property="HorizontalAlignment" Value="Right" />
         <Setter Property="VerticalAlignment" Value="Center" />
-        <Setter Property="Margin" Value="0,0,65,0" />
+        <Setter Property="Margin" Value="0,0,60,0" />
         <Setter Property="Foreground" Value="{DynamicResource ForegroundWhiteBrush}" />
         <Setter Property="Background" Value="{DynamicResource TransparentBrush}" />
         <Setter Property="FontSize" Value="{DynamicResource Double16}" />
@@ -374,7 +375,7 @@
         <Setter Property="VerticalAlignment" Value="Center" />
         <Setter Property="BorderBrush" Value="DarkGray" />
         <Setter Property="BorderThickness" Value="0,0,0,0" />
-        <Setter Property="Margin" Value="20,0,0,0"></Setter>
+        <Setter Property="Margin" Value="20,0,0,0" />
         <Setter Property="IsHitTestVisible" Value="False" />
         <Setter Property="Foreground" Value="{DynamicResource ForegroundWhiteBrush}" />
         <Setter Property="Background" Value="{DynamicResource TransparentBrush}" />
@@ -388,9 +389,9 @@
         <Setter Property="BorderBrush" Value="DarkGray" />
         <Setter Property="BorderThickness" Value="0,0,0,0" />
         <Setter Property="IsHitTestVisible" Value="False" />
-        <Setter Property="HorizontalAlignment" Value="Right" />
+        <Setter Property="HorizontalAlignment" Value="Left" />
         <Setter Property="VerticalAlignment" Value="Center" />
-        <Setter Property="Margin" Value="0,0,70,0" />
+        <Setter Property="Margin" Value="170,0,0,0" />
         <Setter Property="Foreground" Value="{DynamicResource ForegroundWhiteBrush}" />
         <Setter Property="Background" Value="{DynamicResource TransparentBrush}" />
         <Setter Property="FontSize" Value="{DynamicResource Double16}" />
@@ -404,7 +405,7 @@
         <Setter Property="IsHitTestVisible" Value="False" />
         <Setter Property="HorizontalAlignment" Value="Right" />
         <Setter Property="VerticalAlignment" Value="Center" />
-        <Setter Property="Margin" Value="0,0,70,0" />
+        <Setter Property="Margin" Value="0,0,40,0" />
         <Setter Property="Foreground" Value="{DynamicResource ForegroundWhiteBrush}" />
         <Setter Property="Background" Value="{DynamicResource TransparentBrush}" />
         <Setter Property="FontSize" Value="{DynamicResource Double16}" />
@@ -418,7 +419,7 @@
         <Setter Property="IsHitTestVisible" Value="False" />
         <Setter Property="HorizontalAlignment" Value="Right" />
         <Setter Property="VerticalAlignment" Value="Center" />
-        <Setter Property="Margin" Value="0,0,70,0" />
+        <Setter Property="Margin" Value="0,0,40,0" />
         <Setter Property="Foreground" Value="{DynamicResource ForegroundWhiteBrush}" />
         <Setter Property="Background" Value="{DynamicResource TransparentBrush}" />
         <Setter Property="FontSize" Value="{DynamicResource Double16}" />
@@ -432,7 +433,7 @@
         <Setter Property="IsHitTestVisible" Value="False" />
         <Setter Property="HorizontalAlignment" Value="Left" />
         <Setter Property="VerticalAlignment" Value="Center" />
-        <Setter Property="Margin" Value="155,0,0,0" />
+        <Setter Property="Margin" Value="165,0,0,0" />
         <Setter Property="Foreground" Value="{DynamicResource ForegroundWhiteBrush}" />
         <Setter Property="Background" Value="{DynamicResource TransparentBrush}" />
         <Setter Property="FontSize" Value="{DynamicResource Double16}" />
