--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/View/Contents/MainView.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/View/Contents/MainView.xaml
@@ -3,12 +3,12 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:common="clr-namespace:Engine.TCMS.Turkmenistan.View.Common"
+    xmlns:constant="clr-namespace:Engine.TCMS.Turkmenistan.Constant"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:model="clr-namespace:Engine.TCMS.Turkmenistan.Model"
-    xmlns:viewModel="clr-namespace:Engine.TCMS.Turkmenistan.ViewModel"
     xmlns:regions="http://www.codeplex.com/CompositeWPF"
-    xmlns:constant="clr-namespace:Engine.TCMS.Turkmenistan.Constant"
+    xmlns:viewModel="clr-namespace:Engine.TCMS.Turkmenistan.ViewModel"
     d:DataContext="{d:DesignInstance viewModel:DomainViewModel}"
     d:DesignHeight="550"
     d:DesignWidth="800"
@@ -24,13 +24,16 @@
                 <RowDefinition Height="200*" />
                 <RowDefinition Height="70*" />
             </Grid.RowDefinitions>
-            <ContentControl Grid.Row="0" Grid.RowSpan="2" regions:RegionManager.RegionName="{x:Static constant:RegionNames.ContentProgreesbar}"></ContentControl>
-            <ContentControl Grid.Row="2" regions:RegionManager.RegionName="{x:Static constant:RegionNames.ContentAxleTemperature}"></ContentControl>
+            <ContentControl
+                Grid.Row="0"
+                Grid.RowSpan="2"
+                regions:RegionManager.RegionName="{x:Static constant:RegionNames.ContentProgreesbar}" />
+            <ContentControl Grid.Row="2" regions:RegionManager.RegionName="{x:Static constant:RegionNames.ContentAxleTemperature}" />
 
 
 
         </Grid>
-        <ContentControl Grid.Column="1" regions:RegionManager.RegionName="{x:Static constant:RegionNames.ContentRunParam}"></ContentControl>
+        <ContentControl Grid.Column="1" regions:RegionManager.RegionName="{x:Static constant:RegionNames.ContentRunParam}" />
 
     </Grid>
 </UserControl>
