1.添加故障信息

--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Converters/TurkmenistanConverter.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Converters/TurkmenistanConverter.xaml
@@ -3,12 +3,13 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:constant="clr-namespace:Engine.TCMS.Turkmenistan.Constant"
     xmlns:converter="clr-namespace:MMI.Facility.WPFInfrastructure.Converter;assembly=MMI.Facility.WPFInfrastructure"
-    xmlns:turkmenistan="clr-namespace:Engine.TCMS.Turkmenistan"
-    xmlns:converter1="clr-namespace:Engine.TCMS.Turkmenistan.Converter">
+    xmlns:converter1="clr-namespace:Engine.TCMS.Turkmenistan.Converter"
+    xmlns:turkmenistan="clr-namespace:Engine.TCMS.Turkmenistan">
 
     <converter:MathConverter x:Key="MathConverter" />
     <converter:EnumDescritionConverter x:Key="EnumDescritionConverter" />
+    <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
     <turkmenistan:TargetDistanceScalLengthToLineTicknessConverter x:Key="TargetDistanceScalLengthToLineTicknessConverter" />
-    <converter1:DoubleToStringConverter x:Key="DoubleToStringConverter"></converter1:DoubleToStringConverter>
+    <converter1:DoubleToStringConverter x:Key="DoubleToStringConverter" />
 
 </ResourceDictionary>
