--- a/Platform/Src/MMI.Tools/Desktop/Application/MMITool.MMIConfiguration/View/ConfigureNavigateView.xaml
+++ b/Platform/Src/MMI.Tools/Desktop/Application/MMITool.MMIConfiguration/View/ConfigureNavigateView.xaml
@@ -4,6 +4,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:viewModel="clr-namespace:MMITool.Addin.MMIConfiguration.ViewModel"
              d:DataContext="{d:DesignInstance viewModel:ConfigNavigateViewModel}"
              d:DesignHeight="300"
              d:DesignWidth="150"
@@ -21,9 +22,9 @@
         <ListView x:Name="Lv"
                   Grid.Row="1"
                   Margin="5"
+                  x:FieldModifier="private"
                   ItemsSource="{Binding Path=Model.ConfigConfigFileCollection,
-                                        Mode=OneWay}"
-                  x:FieldModifier="private">
+                                        Mode=OneWay}">
             <i:Interaction.Triggers>
                 <i:EventTrigger EventName="SelectionChanged">
                     <i:InvokeCommandAction Command="{Binding Path=Controller.SelectedChangedCommand}" CommandParameter="{Binding ElementName=Lv, Path=SelectedValue}" />
