--- a/Platform/Src/MMI.Tools/Desktop/Application/MMITool.MMIConfiguration/View/SelectExePathView.xaml
+++ b/Platform/Src/MMI.Tools/Desktop/Application/MMITool.MMIConfiguration/View/SelectExePathView.xaml
@@ -5,6 +5,7 @@
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:validationRules="clr-namespace:MMITool.Addin.MMIConfiguration.ValidationRules"
+             xmlns:viewModel="clr-namespace:MMITool.Addin.MMIConfiguration.ViewModel"
              d:DataContext="{d:DesignInstance viewModel:SelectExePathViewModel}"
              d:DesignHeight="100"
              d:DesignWidth="573"
