--- a/Platform/Src/MMI.Tools/Desktop/Application/MMITool.MMIConfiguration/View/ConfigureContentView.xaml
+++ b/Platform/Src/MMI.Tools/Desktop/Application/MMITool.MMIConfiguration/View/ConfigureContentView.xaml
@@ -1,14 +1,16 @@
 ﻿<UserControl x:Class="MMITool.Addin.MMIConfiguration.View.ConfigureContentView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300"
-             xmlns:regions="http://www.codeplex.com/CompositeWPF"
-             xmlns:mmiConfiguration="clr-namespace:MMITool.Addin.MMIConfiguration"
              xmlns:constant="clr-namespace:MMITool.Addin.MMIConfiguration.Constant"
-             d:DataContext="{d:DesignInstance viewModel:ConfigureContentViewModel}">
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:mmiConfiguration="clr-namespace:MMITool.Addin.MMIConfiguration"
+             xmlns:regions="http://www.codeplex.com/CompositeWPF"
+             xmlns:viewModel="clr-namespace:MMITool.Addin.MMIConfiguration.ViewModel"
+             d:DataContext="{d:DesignInstance viewModel:ConfigureContentViewModel}"
+             d:DesignHeight="300"
+             d:DesignWidth="300"
+             mc:Ignorable="d">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition />
@@ -22,21 +24,22 @@
                     <TextBlock Text="{Binding Path=Model.CurrentConfigFileModel.FileRelativePath}" />
                 </StackPanel>
             </GroupBox.Header>
-            <ContentControl
-                regions:RegionManager.RegionName="{x:Static constant:ConfigurationRegionNames.ConfigureEditRegion}" />
+            <ContentControl regions:RegionManager.RegionName="{x:Static constant:ConfigurationRegionNames.ConfigureEditRegion}" />
         </GroupBox>
 
-        <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
+        <StackPanel Grid.Row="1"
+                    HorizontalAlignment="Right"
+                    Orientation="Horizontal">
             <StackPanel.Resources>
                 <Style TargetType="Button">
-                    <Style.Setters >
+                    <Style.Setters>
                         <Setter Property="Margin" Value="6" />
                         <Setter Property="Width" Value="60" />
                     </Style.Setters>
                 </Style>
             </StackPanel.Resources>
-            <Button  Content="Ok" Command="{Binding Path=Controller.OkCommand, Mode=OneWay}" />
-            <Button  Content="Cancel" Command="{Binding Path=Controller.CancelCommand, Mode=OneWay}" />
+            <Button Command="{Binding Path=Controller.OkCommand, Mode=OneWay}" Content="Ok" />
+            <Button Command="{Binding Path=Controller.CancelCommand, Mode=OneWay}" Content="Cancel" />
         </StackPanel>
     </Grid>
 </UserControl>
