--- a/Platform/Src/MMI.Tools/Desktop/Application/MMITool.MMIConfiguration/View/HelpView.xaml
+++ b/Platform/Src/MMI.Tools/Desktop/Application/MMITool.MMIConfiguration/View/HelpView.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:viewModel="clr-namespace:MMITool.Addin.MMIConfiguration.ViewModel"
              d:DataContext="{d:DesignInstance viewModel:HelpViewModel}"
              d:DesignHeight="300"
              d:DesignWidth="300"
