--- a/V2/Train/Urban.GuiYang.DDU/Src/Urban.GuiYang.DDU/Resources/Converter/GuiYangDDUConverterResource.xaml
+++ b/V2/Train/Urban.GuiYang.DDU/Src/Urban.GuiYang.DDU/Resources/Converter/GuiYangDDUConverterResource.xaml
@@ -1,9 +1,10 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:constant="clr-namespace:Urban.GuiYang.DDU.Model.Constant"
-                    xmlns:converter="clr-namespace:MMI.Facility.WPFInfrastructure.Converter;assembly=MMI.Facility.WPFInfrastructure"
-                    xmlns:converter1="clr-namespace:Urban.GuiYang.DDU.Converter"
-                    xmlns:system="clr-namespace:System;assembly=mscorlib">
+﻿<ResourceDictionary
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:constant="clr-namespace:Urban.GuiYang.DDU.Model.Constant"
+    xmlns:converter="clr-namespace:MMI.Facility.WPFInfrastructure.Converter;assembly=MMI.Facility.WPFInfrastructure"
+    xmlns:converter1="clr-namespace:Urban.GuiYang.DDU.Converter"
+    xmlns:system="clr-namespace:System;assembly=mscorlib">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="../Image/GuiYangDDUImageResource.xaml" />
@@ -18,6 +19,8 @@
     <converter:NegativeBoolConverter x:Key="NegativeBoolConverter" />
 
     <converter1:TestConverter x:Key="TestConverter" />
+
+    <converter:EnumDescritionConverter x:Key="EnumDescritionConverter" />
 
     <!--<converter1:FloatToTowBrakeConverter x:Key="FloatToTowBrakeConverter" />-->
 
