--- a/V2/Train/Urban.GuiYang.DDU/Src/Urban.GuiYang.DDU/Resources/Styles/GuiYangDDUItemsStyle.xaml
+++ b/V2/Train/Urban.GuiYang.DDU/Src/Urban.GuiYang.DDU/Resources/Styles/GuiYangDDUItemsStyle.xaml
@@ -1,5 +1,4 @@
-﻿
-<ResourceDictionary
+﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:carPart="clr-namespace:Urban.GuiYang.DDU.Model.Train.CarPart"
@@ -630,7 +629,7 @@
                                     VerticalAlignment="Center"
                                     FontFamily="{StaticResource FontFamilySongTypeface}"
                                     FontSize="22"
-                                    Text="{Binding Path=TowPage.Value.TowBrakeKNState.State.Value, StringFormat={}0.00}"
+                                    Text="{Binding Path=TowPage.Value.TowBrakeKNState.State.Value, StringFormat={}{0:F0}}"
                                     TextAlignment="Center" />
                             </Border>
                             <Image Source="{StaticResource ImgCommonUnkownBig}" Visibility="{Binding Path=TowPage.Value.TowBrakeKNState.State.GeneralState, Converter={StaticResource BoolVisibilityConverter}}" />
@@ -821,7 +820,7 @@
                                     VerticalAlignment="Center"
                                     FontFamily="{StaticResource FontFamilySongTypeface}"
                                     FontSize="26"
-                                    Text="{Binding Path=Brake.BrakePage2.Value.AirSpringPreesure1.State.Value, StringFormat={}0.0}"
+                                    Text="{Binding Path=Brake.BrakePage2.Value.AirSpringPreesure1.State.Value}"
                                     TextAlignment="Center" />
                             </Border>
 
@@ -856,7 +855,7 @@
                                     VerticalAlignment="Center"
                                     FontFamily="{StaticResource FontFamilySongTypeface}"
                                     FontSize="26"
-                                    Text="{Binding Path=Brake.BrakePage2.Value.AirSpringPreesure2.State.Value, StringFormat={}0.0}"
+                                    Text="{Binding Path=Brake.BrakePage2.Value.AirSpringPreesure2.State.Value}"
                                     TextAlignment="Center" />
                             </Border>
                             <Image Source="{StaticResource ImgCommonUnkownBig}" Visibility="{Binding Path=Brake.BrakePage2.Value.AirSpringPreesure2.State.GeneralState, Converter={StaticResource BoolVisibilityConverter}}" />
@@ -890,7 +889,7 @@
                                     VerticalAlignment="Center"
                                     FontFamily="{StaticResource FontFamilySongTypeface}"
                                     FontSize="26"
-                                    Text="{Binding Path=Brake.BrakePage2.Value.BrakePressure1.State.Value, StringFormat={}0.0}"
+                                    Text="{Binding Path=Brake.BrakePage2.Value.BrakePressure1.State.Value}"
                                     TextAlignment="Center" />
                             </Border>
 
@@ -925,7 +924,7 @@
                                     VerticalAlignment="Center"
                                     FontFamily="{StaticResource FontFamilySongTypeface}"
                                     FontSize="26"
-                                    Text="{Binding Path=Brake.BrakePage2.Value.BrakePressure2.State.Value, StringFormat={}0.0}"
+                                    Text="{Binding Path=Brake.BrakePage2.Value.BrakePressure2.State.Value}"
                                     TextAlignment="Center" />
                             </Border>
                             <Image Source="{StaticResource ImgCommonUnkownBig}" Visibility="{Binding Path=Brake.BrakePage2.Value.BrakePressure2.State.GeneralState, Converter={StaticResource BoolVisibilityConverter}}" />
@@ -1183,7 +1182,7 @@
                                     VerticalAlignment="Center"
                                     FontFamily="{StaticResource FontFamilySongTypeface}"
                                     FontSize="26"
-                                    Text="{Binding AssistPage.Value.BatteryChargerState.State.Value, StringFormat={}0.0}"
+                                    Text="{Binding AssistPage.Value.BatteryChargerState.State.Value, StringFormat={}{0:F0}}"
                                     TextAlignment="Center" />
                             </Border>
                             <Image Source="{StaticResource ImgCommonUnkownBig}" Visibility="{Binding Path=AssistPage.Value.BatteryChargerState.State.GeneralState, Converter={StaticResource BoolVisibilityConverter}}" />
@@ -1217,7 +1216,7 @@
                                     VerticalAlignment="Center"
                                     FontFamily="{StaticResource FontFamilySongTypeface}"
                                     FontSize="26"
-                                    Text="{Binding Path=AssistPage.Value.StorageBatterytemperature.State.Value, StringFormat={}0.0}"
+                                    Text="{Binding Path=AssistPage.Value.StorageBatterytemperature.State.Value, StringFormat={}{0:F0}}"
                                     TextAlignment="Center" />
                             </Border>
                             <Image Source="{StaticResource ImgCommonUnkownBig}" Visibility="{Binding Path=AssistPage.Value.StorageBatterytemperature.State.GeneralState, Converter={StaticResource BoolVisibilityConverter}}" />
@@ -1279,7 +1278,7 @@
                                     VerticalAlignment="Center"
                                     FontFamily="{StaticResource FontFamilySongTypeface}"
                                     FontSize="26"
-                                    Text="{Binding Path=AssistPage.Value.StorageBatteryA.State.Value, StringFormat={}0.0}"
+                                    Text="{Binding Path=AssistPage.Value.StorageBatteryA.State.Value, StringFormat={}{0:F0}}"
                                     TextAlignment="Center" />
                             </Border>
                             <Image Source="{StaticResource ImgCommonUnkownBig}" Visibility="{Binding Path=AssistPage.Value.StorageBatteryA.State.GeneralState, Converter={StaticResource BoolVisibilityConverter}}" />
