--- a/V2/Train/Urban.GuiYang.DDU/Src/Urban.GuiYang.DDU/View/Contents/ContentContentLayout.xaml
+++ b/V2/Train/Urban.GuiYang.DDU/Src/Urban.GuiYang.DDU/View/Contents/ContentContentLayout.xaml
@@ -15,13 +15,10 @@
             <RowDefinition Height="133*" />
             <RowDefinition Height="20*" />
         </Grid.RowDefinitions>
-        <Border regions:RegionManager.RegionName="{x:Static constant:RegionNames.ContentContentTrain}" />
-        <Viewbox Grid.Row="1" Stretch="Fill">
-            <Border
-                Width="800"
-                Height="266"
-                regions:RegionManager.RegionName="{x:Static constant:RegionNames.ContentContentContent}" />
-        </Viewbox>
+        <Border
+            Grid.Row="0"
+            Grid.RowSpan="2"
+            regions:RegionManager.RegionName="{x:Static constant:RegionNames.ContentContentAll}" />
         <Border Grid.Row="2" regions:RegionManager.RegionName="{x:Static constant:RegionNames.ContentContentFault}" />
         <Border
             Grid.Row="0"
