--- a/V2/Train/Urban.GuiYang.DDU/Src/Urban.GuiYang.DDU/View/Contents/Contents/AirConditionPage1ContentView.xaml
+++ b/V2/Train/Urban.GuiYang.DDU/Src/Urban.GuiYang.DDU/View/Contents/Contents/AirConditionPage1ContentView.xaml
@@ -105,7 +105,7 @@
             HorizontalAlignment="Center"
             VerticalAlignment="Top"
             Orientation="Horizontal">
-            <TextBlock Text="{StaticResource StringPage}" />
+
             <TextBlock Text="{Binding Path=TrainViewModel.Model.AirConditionPageIndex, Converter={StaticResource MathConverter}, ConverterParameter=x+1}" />
             <TextBlock Text="-2" />
         </StackPanel>
@@ -171,7 +171,9 @@
             Grid.RowSpan="3"
             Grid.Column="3"
             Margin="10,42,10,13"
-            Content="{StaticResource StringFault}" />
+            Command="{Binding Controller.GoToFault}"
+            Content="{StaticResource StringFault}"
+            State="{Binding Model.FaultSate}" />
         <Grid
             Grid.Row="7"
             Grid.RowSpan="2"
