--- a/V2/Train/Urban.GuiYang.DDU/Src/Urban.GuiYang.DDU/View/Contents/Contents/BrakePage1ContentView.xaml
+++ b/V2/Train/Urban.GuiYang.DDU/Src/Urban.GuiYang.DDU/View/Contents/Contents/BrakePage1ContentView.xaml
@@ -3,12 +3,12 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:common="clr-namespace:Urban.GuiYang.DDU.View.Common"
+    xmlns:constant="clr-namespace:Urban.GuiYang.DDU.Constant"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Urban.GuiYang.DDU.View.Contents.Contents"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:view="clr-namespace:MMI.Facility.WPFInfrastructure.View;assembly=MMI.Facility.WPFInfrastructure"
     xmlns:viewModel="clr-namespace:Urban.GuiYang.DDU.ViewModel"
-    xmlns:constant="clr-namespace:Urban.GuiYang.DDU.Constant"
     d:DataContext="{d:DesignInstance viewModel:DomainViewModel}"
     d:DesignHeight="266"
     d:DesignWidth="800"
@@ -38,11 +38,11 @@
         <common:NavigationButton
             Grid.RowSpan="3"
             Grid.Column="3"
-            State="{Binding Model.BypassState}"
+            Margin="10,17,10,38"
             Command="{Binding Controller.GoToBypass}"
             CommandParameter="{x:Static constant:ViewNames.MainPageByPass1ContentView}"
-            Margin="10,17,10,38"
-            Content="{StaticResource StringByPass}" />
+            Content="{StaticResource StringByPass}"
+            State="{Binding Model.BypassState}" />
 
         <Grid
             Grid.Row="0"
@@ -103,7 +103,7 @@
             HorizontalAlignment="Center"
             VerticalAlignment="Center"
             Orientation="Horizontal">
-            <TextBlock Text="{StaticResource StringPage}" />
+
             <TextBlock Text="{Binding Path=TrainViewModel.Model.BrakePageIndex, Converter={StaticResource MathConverter}, ConverterParameter=x+1}" />
             <TextBlock Text="-3" />
         </StackPanel>
@@ -180,8 +180,9 @@
             Grid.RowSpan="3"
             Grid.Column="3"
             Margin="10,42,10,13"
+            Command="{Binding Controller.GoToFault}"
             Content="{StaticResource StringFault}"
-            State="Normal" />
+            State="{Binding Model.FaultSate}" />
         <Grid
             Grid.Row="8"
             Grid.Column="1"
