--- a/V2/Train/Urban.GuiYang.DDU/Src/Urban.GuiYang.DDU/View/Contents/Contents/BrakePage3ContentView.xaml
+++ b/V2/Train/Urban.GuiYang.DDU/Src/Urban.GuiYang.DDU/View/Contents/Contents/BrakePage3ContentView.xaml
@@ -1,18 +1,19 @@
-﻿<UserControl x:Class="Urban.GuiYang.DDU.View.Contents.Contents.BrakePage3ContentView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:common="clr-namespace:Urban.GuiYang.DDU.View.Common"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:Urban.GuiYang.DDU.View.Contents.Contents"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:view="clr-namespace:MMI.Facility.WPFInfrastructure.View;assembly=MMI.Facility.WPFInfrastructure"
-             xmlns:viewModel="clr-namespace:Urban.GuiYang.DDU.ViewModel"
-             xmlns:constant="clr-namespace:Urban.GuiYang.DDU.Constant"
-             d:DataContext="{d:DesignInstance viewModel:DomainViewModel}"
-             d:DesignHeight="266"
-             d:DesignWidth="800"
-             Background="{StaticResource ContentBackgroundBrush}"
-             mc:Ignorable="d">
+﻿<UserControl
+    x:Class="Urban.GuiYang.DDU.View.Contents.Contents.BrakePage3ContentView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:common="clr-namespace:Urban.GuiYang.DDU.View.Common"
+    xmlns:constant="clr-namespace:Urban.GuiYang.DDU.Constant"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:Urban.GuiYang.DDU.View.Contents.Contents"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:view="clr-namespace:MMI.Facility.WPFInfrastructure.View;assembly=MMI.Facility.WPFInfrastructure"
+    xmlns:viewModel="clr-namespace:Urban.GuiYang.DDU.ViewModel"
+    d:DataContext="{d:DesignInstance viewModel:DomainViewModel}"
+    d:DesignHeight="266"
+    d:DesignWidth="800"
+    Background="{StaticResource ContentBackgroundBrush}"
+    mc:Ignorable="d">
     <Grid>
 
         <Grid.ColumnDefinitions>
@@ -34,82 +35,93 @@
             <RowDefinition Height="47*" />
             <RowDefinition Height="5*" />
         </Grid.RowDefinitions>
-        <common:NavigationButton Grid.RowSpan="3"
-                                 Grid.Column="3"
-                                 Margin="10,17,10,38"
-                                 State="{Binding Model.BypassState}"
-                                 Command="{Binding Controller.GoToBypass}"
-                                 CommandParameter="{x:Static constant:ViewNames.MainPageByPass1ContentView}"
-                                 Content="{StaticResource StringByPass}" />
-        <Grid Grid.Row="0"
-              Grid.Column="1"
-              view:GridLine.Brush="{StaticResource BlackBrush}"
-              view:GridLine.Style="ShowAll"
-              view:GridLine.WidthStyle="AllLineSame"
-              ColumnSpan="2" />
-        <TextBlock Grid.Row="0"
-                   Grid.Column="1"
-                   Height="23"
-                   Margin="0,12"
-                   VerticalAlignment="Center"
-                   FontFamily="{StaticResource FontFamilyArial}"
-                   FontSize="20"
-                   Text="{StaticResource StringWeight}"
-                   TextAlignment="Left" />
-        <ItemsControl Grid.Row="0"
-                      Grid.Column="2"
-                      ItemsSource="{Binding Path=TrainViewModel.Model.CarCollection}"
-                      Style="{StaticResource WeightItemStyle}" />
+        <common:NavigationButton
+            Grid.RowSpan="3"
+            Grid.Column="3"
+            Margin="10,17,10,38"
+            Command="{Binding Controller.GoToBypass}"
+            CommandParameter="{x:Static constant:ViewNames.MainPageByPass1ContentView}"
+            Content="{StaticResource StringByPass}"
+            State="{Binding Model.BypassState}" />
+        <Grid
+            Grid.Row="0"
+            Grid.Column="1"
+            view:GridLine.Brush="{StaticResource BlackBrush}"
+            view:GridLine.Style="ShowAll"
+            view:GridLine.WidthStyle="AllLineSame"
+            ColumnSpan="2" />
+        <TextBlock
+            Grid.Row="0"
+            Grid.Column="1"
+            Height="23"
+            Margin="0,12"
+            VerticalAlignment="Center"
+            FontFamily="{StaticResource FontFamilyArial}"
+            FontSize="20"
+            Text="{StaticResource StringWeight}"
+            TextAlignment="Left" />
+        <ItemsControl
+            Grid.Row="0"
+            Grid.Column="2"
+            ItemsSource="{Binding Path=TrainViewModel.Model.CarCollection}"
+            Style="{StaticResource WeightItemStyle}" />
 
-        <Grid Grid.Row="2"
-              Grid.Column="1"
-              view:GridLine.Brush="{StaticResource BlackBrush}"
-              view:GridLine.Style="ShowAll"
-              view:GridLine.WidthStyle="AllLineSame"
-              ColumnSpan="2" />
-        <TextBlock Grid.Row="2"
-                   Grid.Column="1"
-                   Height="23"
-                   Margin="0,12"
-                   VerticalAlignment="Center"
-                   FontFamily="{StaticResource FontFamilyArial}"
-                   FontSize="20"
-                   Text="{StaticResource StringLaden}"
-                   TextAlignment="Left" />
-        <ItemsControl Grid.Row="2"
-                      Grid.Column="2"
-                      ItemsSource="{Binding Path=TrainViewModel.Model.CarCollection}"
-                      Style="{StaticResource LadenItemStyle}" />
-        <StackPanel Grid.Row="2"
-                    Grid.Column="3"
-                    Margin="0,20,0,0"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    Orientation="Horizontal">
-            <TextBlock Text="{StaticResource StringPage}" />
+        <Grid
+            Grid.Row="2"
+            Grid.Column="1"
+            view:GridLine.Brush="{StaticResource BlackBrush}"
+            view:GridLine.Style="ShowAll"
+            view:GridLine.WidthStyle="AllLineSame"
+            ColumnSpan="2" />
+        <TextBlock
+            Grid.Row="2"
+            Grid.Column="1"
+            Height="23"
+            Margin="0,12"
+            VerticalAlignment="Center"
+            FontFamily="{StaticResource FontFamilyArial}"
+            FontSize="20"
+            Text="{StaticResource StringLaden}"
+            TextAlignment="Left" />
+        <ItemsControl
+            Grid.Row="2"
+            Grid.Column="2"
+            ItemsSource="{Binding Path=TrainViewModel.Model.CarCollection}"
+            Style="{StaticResource LadenItemStyle}" />
+        <StackPanel
+            Grid.Row="2"
+            Grid.Column="3"
+            Margin="0,20,0,0"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            Orientation="Horizontal">
             <TextBlock Text="{Binding Path=TrainViewModel.Model.BrakePageIndex, Converter={StaticResource MathConverter}, ConverterParameter=x+1}" />
             <TextBlock Text="-3" />
         </StackPanel>
 
-        <common:ImageButton Grid.Row="3"
-                            Grid.RowSpan="2"
-                            Grid.Column="3"
-                            Margin="25,0,25,20"
-                            Command="{Binding Path=TrainViewModel.Controller.BrakeController.GotoPreCommand}"
-                            PressedImage="{StaticResource ImgOtherBtnUp}"
-                            RelasedImage="{StaticResource ImgOtherBtnUp}" />
-        <common:ImageButton Grid.Row="4"
-                            Grid.RowSpan="3"
-                            Grid.Column="3"
-                            Margin="25,40,25,31"
-                            Command="{Binding Path=TrainViewModel.Controller.BrakeController.GotoNextCommand}"
-                            PressedImage="{StaticResource ImgOtherBtnDown}"
-                            RelasedImage="{StaticResource ImgOtherBtnDown}" />
-        <common:NavigationButton Grid.Row="6"
-                                 Grid.RowSpan="3"
-                                 Grid.Column="3"
-                                 Margin="10,42,10,13"
-                                 Content="{StaticResource StringFault}"
-                                 State="Fault" />
+        <common:ImageButton
+            Grid.Row="3"
+            Grid.RowSpan="2"
+            Grid.Column="3"
+            Margin="25,0,25,20"
+            Command="{Binding Path=TrainViewModel.Controller.BrakeController.GotoPreCommand}"
+            PressedImage="{StaticResource ImgOtherBtnUp}"
+            RelasedImage="{StaticResource ImgOtherBtnUp}" />
+        <common:ImageButton
+            Grid.Row="4"
+            Grid.RowSpan="3"
+            Grid.Column="3"
+            Margin="25,40,25,31"
+            Command="{Binding Path=TrainViewModel.Controller.BrakeController.GotoNextCommand}"
+            PressedImage="{StaticResource ImgOtherBtnDown}"
+            RelasedImage="{StaticResource ImgOtherBtnDown}" />
+        <common:NavigationButton
+            Grid.Row="6"
+            Grid.RowSpan="3"
+            Grid.Column="3"
+            Margin="10,42,10,13"
+            Command="{Binding Controller.GoToFault}"
+            Content="{StaticResource StringFault}"
+            State="{Binding Model.FaultSate}" />
     </Grid>
 </UserControl>
