--- a/V2/Train/Urban.GuiYang.DDU/Src/Urban.GuiYang.DDU/View/Contents/Contents/MainViewContentView.xaml
+++ b/V2/Train/Urban.GuiYang.DDU/Src/Urban.GuiYang.DDU/View/Contents/Contents/MainViewContentView.xaml
@@ -145,7 +145,9 @@
             Grid.RowSpan="3"
             Grid.Column="3"
             Margin="10,42,10,13"
-            Content="{StaticResource StringFault}" />
+            Command="{Binding Controller.GoToFault}"
+            Content="{StaticResource StringFault}"
+            State="{Binding Model.FaultSate}" />
         <Grid
             Grid.Row="8"
             Grid.Column="1"
