--- a/V2/Train/Urban.GuiYang.DDU/Src/Urban.GuiYang.DDU/View/Contents/Fault/CurrentFault.xaml
+++ b/V2/Train/Urban.GuiYang.DDU/Src/Urban.GuiYang.DDU/View/Contents/Fault/CurrentFault.xaml
@@ -3,10 +3,40 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:Urban.GuiYang.DDU.View.Contents.Fault"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:viewModel="clr-namespace:Urban.GuiYang.DDU.ViewModel"
+    d:DataContext="{d:DesignInstance viewModel:DomainViewModel}"
     d:DesignHeight="30"
     d:DesignWidth="800"
     mc:Ignorable="d">
-    <Grid Background="Red" />
+    <Grid Visibility="{Binding FaultViewModel.Model.Visibility}">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="50*" />
+            <ColumnDefinition Width="50*" />
+            <ColumnDefinition Width="120*" />
+            <ColumnDefinition Width="30*" />
+            <ColumnDefinition Width="30*" />
+            <ColumnDefinition Width="50*" />
+        </Grid.ColumnDefinitions>
+        <Grid.Resources>
+            <Style TargetType="TextBlock">
+                <Setter Property="HorizontalAlignment" Value="Center" />
+                <Setter Property="VerticalAlignment" Value="Center" />
+                <Setter Property="FontSize" Value="16" />
+                <Setter Property="Foreground" Value="Red" />
+            </Style>
+        </Grid.Resources>
+        <TextBlock
+            Grid.Column="0"
+            Foreground="Black"
+            Text="当前故障" />
+        <TextBlock Grid.Column="1" Text="{Binding FaultViewModel.Model.CurrentFault.HapendTime, StringFormat={}{0:HH:mm:ss}}" />
+        <TextBlock Grid.Column="2" Text="{Binding FaultViewModel.Model.CurrentFault.Content}" />
+        <TextBlock Grid.Column="3" Text="{Binding FaultViewModel.Model.CurrentFault.Car, StringFormat=车号{0}}" />
+        <TextBlock Grid.Column="4">
+            <Run Text="等级" />
+            <Run Text="{Binding FaultViewModel.Model.CurrentFault.Level, Converter={StaticResource EnumDescritionConverter}}" />
+        </TextBlock>
+
+    </Grid>
 </UserControl>
