--- a/V2/Train/Urban.GuiYang.DDU/Src/Urban.GuiYang.DDU/View/Contents/Fault/CurrentFaulyListView.xaml
+++ b/V2/Train/Urban.GuiYang.DDU/Src/Urban.GuiYang.DDU/View/Contents/Fault/CurrentFaulyListView.xaml
@@ -1,11 +1,10 @@
 ﻿<UserControl
-    x:Class="Urban.GuiYang.DDU.View.Contents.Contents.HistoryContentView"
+    x:Class="Urban.GuiYang.DDU.View.Contents.Fault.CurrentFaulyListView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:common="clr-namespace:Urban.GuiYang.DDU.View.Common"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:fault="clr-namespace:Urban.GuiYang.DDU.Model.Fault"
-    xmlns:local="clr-namespace:Urban.GuiYang.DDU.View.Contents.Contents"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:view="clr-namespace:MMI.Facility.WPFInfrastructure.View;assembly=MMI.Facility.WPFInfrastructure"
     xmlns:viewModel="clr-namespace:Urban.GuiYang.DDU.ViewModel"
@@ -19,13 +18,20 @@
             Canvas.Left="41"
             Canvas.Top="10"
             FontSize="20"
-            Text="历史故障清单" />
-
+            Text="故障事件清单" />
+        <TextBlock
+            Canvas.Left="486"
+            Canvas.Top="15"
+            FontSize="20"
+            RenderTransformOrigin="0,0.472">
+            <Run Text="故障条数:" />
+            <Run Text="{Binding FaultViewModel.Model.Count}" />
+        </TextBlock>
         <ListBox
-            Canvas.Left="24"
+            Canvas.Left="22"
             Canvas.Top="40"
-            Width="632"
-            Height="290"
+            Width="634"
+            Height="259"
             Background="Black"
             ItemsSource="{Binding FaultViewModel.Model.CurrentPageInfo}"
             SelectedItem="{Binding FaultViewModel.Model.SelectItem, Mode=TwoWay, NotifyOnSourceUpdated=True, NotifyOnTargetUpdated=True}">
@@ -51,13 +57,11 @@
                                         <RowDefinition />
                                         <RowDefinition />
                                         <RowDefinition />
-                                        <RowDefinition />
                                     </Grid.RowDefinitions>
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="50*" />
-                                        <ColumnDefinition Width="250*" />
-                                        <ColumnDefinition Width="100*" />
-                                        <ColumnDefinition Width="100*" />
+                                        <ColumnDefinition Width="300*" />
+                                        <ColumnDefinition Width="150*" />
                                         <ColumnDefinition Width="50*" />
                                         <ColumnDefinition Width="50*" />
                                     </Grid.ColumnDefinitions>
@@ -80,24 +84,20 @@
                                     <TextBlock
                                         Grid.Row="0"
                                         Grid.Column="2"
-                                        Text="发生时间" />
+                                        Text="发生事件" />
                                     <TextBlock
                                         Grid.Row="0"
                                         Grid.Column="3"
-                                        Text="消失时间" />
-                                    <TextBlock
-                                        Grid.Row="0"
-                                        Grid.Column="4"
                                         Text="代码" />
                                     <TextBlock
                                         Grid.Row="0"
-                                        Grid.Column="5"
+                                        Grid.Column="4"
                                         Text="等级" />
                                     <ItemsPresenter
                                         Grid.Row="1"
-                                        Grid.RowSpan="10"
+                                        Grid.RowSpan="9"
                                         Grid.Column="0"
-                                        Grid.ColumnSpan="6" />
+                                        Grid.ColumnSpan="5" />
                                 </Grid>
 
                             </ControlTemplate>
@@ -129,12 +129,11 @@
                     <Setter Property="ItemTemplate">
                         <Setter.Value>
                             <DataTemplate DataType="fault:FaultInfo">
-                                <Grid Height="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=ItemsPresenter}, Path=ActualHeight, Converter={StaticResource MathConverter}, ConverterParameter=x/10}">
+                                <Grid Height="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=ItemsPresenter}, Path=ActualHeight, Converter={StaticResource MathConverter}, ConverterParameter=x/9}">
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="50*" />
-                                        <ColumnDefinition Width="250*" />
-                                        <ColumnDefinition Width="100*" />
-                                        <ColumnDefinition Width="100*" />
+                                        <ColumnDefinition Width="300*" />
+                                        <ColumnDefinition Width="150*" />
                                         <ColumnDefinition Width="50*" />
                                         <ColumnDefinition Width="50*" />
                                     </Grid.ColumnDefinitions>
@@ -152,9 +151,8 @@
                                         HorizontalAlignment="Left"
                                         Text="{Binding Content}" />
                                     <TextBlock Grid.Column="2" Text="{Binding HapendTime, StringFormat={}{0:HH:mm:ss}}" />
-                                    <TextBlock Grid.Column="3" Text="{Binding ConfirmTime, StringFormat={}{0:HH:mm:ss}}" />
-                                    <TextBlock Grid.Column="4" Text="{Binding Code}" />
-                                    <TextBlock Grid.Column="5" Text="{Binding Level, Converter={StaticResource EnumDescritionConverter}}" />
+                                    <TextBlock Grid.Column="3" Text="{Binding Code}" />
+                                    <TextBlock Grid.Column="4" Text="{Binding Level, Converter={StaticResource EnumDescritionConverter}}" />
                                 </Grid>
                             </DataTemplate>
                         </Setter.Value>
@@ -162,14 +160,6 @@
                 </Style>
             </ListBox.Style>
         </ListBox>
-        <common:NavigationButton
-            Canvas.Left="506"
-            Canvas.Top="344"
-            Width="92"
-            Height="56"
-            Margin="0"
-            Content="故障上传"
-            FontSize="14" />
         <!--<Grid
             Canvas.Left="22"
             Canvas.Top="40"
@@ -211,20 +201,20 @@
             PressedImage="{StaticResource ImgOtherBtnDown}"
             RelasedImage="{StaticResource ImgOtherBtnDown}" />
         <TextBlock
-            Canvas.Left="50"
-            Canvas.Top="357"
+            Canvas.Left="22"
+            Canvas.Top="314"
             FontSize="20"
-            Text="故障条数:" />
+            Text="提示：" />
         <TextBlock
             Canvas.Left="701"
             Canvas.Top="112"
             FontSize="12"
             Text="{Binding FaultViewModel.Model.PageInfo}" />
         <TextBlock
-            Canvas.Left="147"
-            Canvas.Top="357"
+            Canvas.Left="87"
+            Canvas.Top="314"
             FontSize="20"
-            Text="{Binding FaultViewModel.Model.Count}" />
+            Text="{Binding FaultViewModel.Model.SelectItem.Trips}" />
         <common:ImageButton
             Canvas.Left="694"
             Canvas.Top="155"
