--- a/V2/Train/Urban.GuiYang.DDU/Src/Urban.GuiYang.DDU/View/Contents/PIS/EmergBroadcastView.xaml
+++ b/V2/Train/Urban.GuiYang.DDU/Src/Urban.GuiYang.DDU/View/Contents/PIS/EmergBroadcastView.xaml
@@ -1,17 +1,18 @@
-﻿<UserControl x:Class="Urban.GuiYang.DDU.View.Contents.PIS.EmergBroadcastView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:common="clr-namespace:Urban.GuiYang.DDU.View.Common"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-             xmlns:interactivity="clr-namespace:MMI.Facility.WPFInfrastructure.Interactivity;assembly=MMI.Facility.WPFInfrastructure"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:viewModel="clr-namespace:Urban.GuiYang.DDU.ViewModel"
-             Background="{StaticResource ContentBackgroundBrush}"
-             d:DataContext="{d:DesignInstance viewModel:DomainViewModel}"
-             d:DesignHeight="450"
-             d:DesignWidth="800"
-             mc:Ignorable="d">
+﻿<UserControl
+    x:Class="Urban.GuiYang.DDU.View.Contents.PIS.EmergBroadcastView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:common="clr-namespace:Urban.GuiYang.DDU.View.Common"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+    xmlns:interactivity="clr-namespace:MMI.Facility.WPFInfrastructure.Interactivity;assembly=MMI.Facility.WPFInfrastructure"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:viewModel="clr-namespace:Urban.GuiYang.DDU.ViewModel"
+    d:DataContext="{d:DesignInstance viewModel:DomainViewModel}"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    Background="{StaticResource ContentBackgroundBrush}"
+    mc:Ignorable="d">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="36*" />
@@ -25,16 +26,18 @@
             <RowDefinition Height="32*" />
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Row="1"
-                   Grid.Column="1"
-                   Style="{StaticResource PISEmergBroadcastBlackTextStyle}"
-                   Text="{StaticResource StringEmergBroadcastList}" />
+        <TextBlock
+            Grid.Row="1"
+            Grid.Column="1"
+            Style="{StaticResource PISEmergBroadcastBlackTextStyle}"
+            Text="{StaticResource StringEmergBroadcastList}" />
 
-        <ListBox Grid.Row="2"
-                 Grid.Column="1"
-                 ItemsSource="{Binding Path=PISViewModel.EmergBroadcastViewModel.Model.ShowingBroadcastCollection.Value.Items}"
-                 SelectedItem="{Binding Path=PISViewModel.EmergBroadcastViewModel.Model.SelectedEmergBroadcast}"
-                 Style="{StaticResource EmergBroadcastItemStyle}">
+        <ListBox
+            Grid.Row="2"
+            Grid.Column="1"
+            ItemsSource="{Binding Path=PISViewModel.EmergBroadcastViewModel.Model.ShowingBroadcastCollection.Value.Items}"
+            SelectedItem="{Binding Path=PISViewModel.EmergBroadcastViewModel.Model.SelectedEmergBroadcast}"
+            Style="{StaticResource EmergBroadcastItemStyle}">
 
             <i:Interaction.Triggers>
                 <i:EventTrigger EventName="SelectionChanged">
@@ -59,27 +62,30 @@
                 <RowDefinition Height="43*" />
                 <RowDefinition Height="103*" />
             </Grid.RowDefinitions>
-            <StackPanel Grid.Row="1"
-                        Grid.Column="1"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Center"
-                        Orientation="Horizontal">
+            <StackPanel
+                Grid.Row="1"
+                Grid.Column="1"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Center"
+                Orientation="Horizontal">
                 <TextBlock Style="{StaticResource PageIndicatorTextStyle}" Text="{StaticResource StringPage}" />
                 <TextBlock Style="{StaticResource PageIndicatorTextStyle}" Text="{Binding Path=PISViewModel.EmergBroadcastViewModel.Model.ShowingBroadcastCollection.Value.CurrentPageIndex, Converter={StaticResource MathConverter}, ConverterParameter=x+1}" />
                 <TextBlock Style="{StaticResource PageIndicatorTextStyle}" Text="{Binding Path=PISViewModel.EmergBroadcastViewModel.Model.ShowingBroadcastCollection.Value.PageCount, StringFormat=-{0}}" />
             </StackPanel>
 
-            <common:ImageButton Grid.Row="2"
-                                Grid.Column="1"
-                                Command="{Binding Path=PISViewModel.EmergBroadcastViewModel.Model.PageUpCommand}"
-                                PressedImage="{StaticResource ImgOtherBtnUp}"
-                                RelasedImage="{StaticResource ImgOtherBtnUp}" />
+            <common:ImageButton
+                Grid.Row="2"
+                Grid.Column="1"
+                Command="{Binding Path=PISViewModel.EmergBroadcastViewModel.Model.PageUpCommand}"
+                PressedImage="{StaticResource ImgOtherBtnUp}"
+                RelasedImage="{StaticResource ImgOtherBtnUp}" />
 
-            <common:ImageButton Grid.Row="3"
-                                Grid.Column="1"
-                                Command="{Binding Path=PISViewModel.EmergBroadcastViewModel.Model.PageDownCommand}"
-                                PressedImage="{StaticResource ImgOtherBtnDown}"
-                                RelasedImage="{StaticResource ImgOtherBtnDown}" />
+            <common:ImageButton
+                Grid.Row="3"
+                Grid.Column="1"
+                Command="{Binding Path=PISViewModel.EmergBroadcastViewModel.Model.PageDownCommand}"
+                PressedImage="{StaticResource ImgOtherBtnDown}"
+                RelasedImage="{StaticResource ImgOtherBtnDown}" />
         </Grid>
 
         <Grid Grid.Row="3" Grid.Column="1">
@@ -95,9 +101,10 @@
                 <RowDefinition Height="53*" />
                 <RowDefinition Height="24*" />
             </Grid.RowDefinitions>
-            <common:NavigationButton Grid.Row="1"
-                                     Grid.Column="1"
-                                     Content="{StaticResource StringSigle}">
+            <common:NavigationButton
+                Grid.Row="1"
+                Grid.Column="1"
+                Content="{StaticResource StringSigle}">
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="PreviewMouseDown">
                         <interactivity:InvokeCommandAction Command="{Binding Path=PISViewModel.EmergBroadcastViewModel.Model.SigleBroadcastCommand}" CommandParameter="1" />
@@ -107,9 +114,10 @@
                     </i:EventTrigger>
                 </i:Interaction.Triggers>
             </common:NavigationButton>
-            <common:NavigationButton Grid.Row="1"
-                                     Grid.Column="3"
-                                     Content="{StaticResource StringCircle}">
+            <common:NavigationButton
+                Grid.Row="1"
+                Grid.Column="3"
+                Content="{StaticResource StringCircle}">
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="PreviewMouseDown">
                         <interactivity:InvokeCommandAction Command="{Binding Path=PISViewModel.EmergBroadcastViewModel.Model.CircleBroadcastCommand}" CommandParameter="1" />
@@ -123,12 +131,14 @@
 
         </Grid>
 
-        <common:NavigationButton Grid.Row="3"
-                                 Grid.Column="2"
-                                 Width="84"
-                                 Margin="14,36,13,10"
-                                 Content="{StaticResource StringFault}"
-                                 Style="{StaticResource PISNavigationBtnStyle}" />
+        <common:NavigationButton
+            Grid.Row="3"
+            Grid.Column="2"
+            Width="84"
+            Margin="14,36,13,10"
+            Command="{Binding Controller.GoToFault}"
+            Content="{StaticResource StringFault}"
+            Style="{StaticResource PISNavigationBtnStyle}" />
 
 
     </Grid>
