--- a/V2/Train/Urban.GuiYang.DDU/Src/Urban.GuiYang.DDU/View/Contents/PIS/PISContentLayoutView.xaml
+++ b/V2/Train/Urban.GuiYang.DDU/Src/Urban.GuiYang.DDU/View/Contents/PIS/PISContentLayoutView.xaml
@@ -1,20 +1,21 @@
-﻿<UserControl x:Class="Urban.GuiYang.DDU.View.Contents.PIS.PISContentLayoutView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:constant="clr-namespace:Urban.GuiYang.DDU.Constant"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:regions="http://www.codeplex.com/CompositeWPF"
-             xmlns:viewModel="clr-namespace:Urban.GuiYang.DDU.ViewModel"
-             d:DataContext="{d:DesignInstance viewModel:DomainViewModel}"
-             d:DesignHeight="450"
-             d:DesignWidth="800"
-             mc:Ignorable="d">
+﻿<UserControl
+    x:Class="Urban.GuiYang.DDU.View.Contents.PIS.PISContentLayoutView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:constant="clr-namespace:Urban.GuiYang.DDU.Constant"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:regions="http://www.codeplex.com/CompositeWPF"
+    xmlns:viewModel="clr-namespace:Urban.GuiYang.DDU.ViewModel"
+    d:DataContext="{d:DesignInstance viewModel:DomainViewModel}"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    mc:Ignorable="d">
     <Grid>
         <Border regions:RegionManager.RegionName="{x:Static constant:RegionNames.ContentContentContentPISContent}" IsHitTestVisible="{Binding Path=PISViewModel.Model.PopupViewVisible, Converter={StaticResource NegativeBoolConverter}}" />
-        <Border Margin="60,50,60,70"
-                regions:RegionManager.RegionName="{x:Static constant:RegionNames.ContentContentContentPISContentPopupView}"
-                Visibility="{Binding Path=PISViewModel.Model.PopupViewVisible,
-                                     Converter={StaticResource BoolVisibilityConverter}}" />
+        <Border
+            Margin="60,50,60,70"
+            regions:RegionManager.RegionName="{x:Static constant:RegionNames.ContentContentContentPISContentPopupView}"
+            Visibility="{Binding Path=PISViewModel.Model.PopupViewVisible, Converter={StaticResource BoolVisibilityConverter}}" />
     </Grid>
 </UserControl>
