1.添加维护界面

--- a/V2/Train/Urban.GuiYang.DDU/Src/Urban.GuiYang.DDU/Resources/Styles/GuiYangDDUButtonStyle.xaml
+++ b/V2/Train/Urban.GuiYang.DDU/Src/Urban.GuiYang.DDU/Resources/Styles/GuiYangDDUButtonStyle.xaml
@@ -21,4 +21,32 @@
             <Setter Property="FontSize" Value="12" />
         </Style.Setters>
     </Style>
+    <Style x:Key="EmergencyButtonStyle" TargetType="ToggleButton">
+    <Setter Property="FontSize" Value="18"></Setter>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="ToggleButton">
+                    <Border Background="{TemplateBinding Background}">
+                        <TextBlock Text="{TemplateBinding Content}" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsChecked" Value="True">
+                            <Setter Property="Background">
+                                <Setter.Value>
+                                    <ImageBrush ImageSource="{DynamicResource ImgNavigationButtonSelected}" />
+                                </Setter.Value>
+                            </Setter>
+                        </Trigger>
+                        <Trigger Property="IsChecked" Value="False">
+                            <Setter Property="Background">
+                                <Setter.Value>
+                                    <ImageBrush ImageSource="{DynamicResource ImgNavigationButtonNoSelected}" />
+                                </Setter.Value>
+                            </Setter>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 </ResourceDictionary>
