--- a/V2/Train/Urban.GuiYang.DDU/Src/Urban.GuiYang.DDU/View/Contents/Contents/MaintenanceContentView.xaml
+++ b/V2/Train/Urban.GuiYang.DDU/Src/Urban.GuiYang.DDU/View/Contents/Contents/MaintenanceContentView.xaml
@@ -3,13 +3,26 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:Urban.GuiYang.DDU.View.Contents.Contents"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewModel="clr-namespace:Urban.GuiYang.DDU.ViewModel"
+    xmlns:common="clr-namespace:Urban.GuiYang.DDU.View.Common"
     d:DataContext="{d:DesignInstance viewModel:DomainViewModel}"
     d:DesignHeight="410"
     d:DesignWidth="800"
     Background="{StaticResource ContentBackgroundBrush}"
     mc:Ignorable="d">
-    <Grid />
+    <Canvas>
+        <TextBlock Text="请输入密码" FontSize="26" Canvas.Left="279" Canvas.Top="100"></TextBlock>
+        <TextBox Width="205" Canvas.Left="250" Canvas.Top="150" Height="42"></TextBox>
+        <Border Background="Transparent"  Width="230" Height="248" Canvas.Left="514" Canvas.Top="48"></Border>
+        <Border Background="Transparent"  Width="230" Height="248" Canvas.Left="514" Canvas.Top="48">
+            <Grid>
+                <Image  Source="/Urban.GuiYang.DDU;component/键盘.png" Stretch="Fill"/>
+            </Grid>
+        </Border>
+        <common:NavigationButton
+            Command="{Binding Controller.GoToFault}"
+            Content="{StaticResource StringFault}"
+            State="{Binding Model.FaultSate}" Canvas.Left="713" Margin="0" Canvas.Top="353" Width="77" />
+    </Canvas>
 </UserControl>
